# jeopardy_board_transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: sweep_tiny.json  tiny.json
scripts/: generate_html.py  prepare_data.py  sweep.py  train.py
src/jeopardy_transformer/: __init__.py  checkpointing.py  data.py  generate.py  html.py  metrics.py  model.py  special_tokens.py  sweep.py  train.py
tests/: test_formatting.py
