[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeopardy-transformer"
version = "0.1.0"
description = "Readable GPT-style Transformer trained on Jeopardy clues."
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "tiktoken>=0.7",
  "torch>=2.2",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
